update readme and prereq script